Fix new category form on blog dashboard

--- a/blog/templates/blog/HTMXsnippets/categories-list.html
+++ b/blog/templates/blog/HTMXsnippets/categories-list.html
@@ -1,57 +1,41 @@
 
-  
-  <div id="categories"
-  hx-target="#categories"
-  hx-swap="outerHTML">
 
-  <table class="table">
-    <thead>
-        <tr>
-            <th scope="col">Category Name</th>
-           
+
+<table class="table" id="categories">
+  <thead>
+    <tr>
+      
+      <th>Name</th>
+     
+      <th></th>
+      <th></th>
+    </tr>
+  </thead>
+  <tbody hx-confirm="Are you sure?" hx-target="closest tr" hx-swap="outerHTML">
+      {% for category in categories %}
+      <tr>
+          <td>{{ category.name}}</td>
+         
+          
+          <td>
+              <button class="btn btn-warning btn-sm "hx-confirm="unset" hx-get="{% url 'edit-category' category.id %}">
+                  Edit
+              </button>
+          </td>
+          <td>
+            <button class="btn btn-danger btn-sm" hx-delete="{% url 'delete-category' category.id %}">
+              Delete
+            </button>
+          </td>
         </tr>
-    </thead>
-    <tbody>
-  {% for category in categories %}
-  <tr><td>
-    <div id="category-{{ category.id }}" class = ""> <span>{{ category.name  }}</span>
-      <button hx-trigger='click' hx-swap="outerHTML" hx-get="{% url 'edit-category' category.id %}" hx-target="#category-{{ category.id}}" class="btn btn-warning m-1" >Edit</button>
-  
-      <button type="button" class="btn btn-danger px-3" data-bs-toggle="modal" data-bs-target="#exampleModal-{{ category.id}}">
-        Delete
-      </button>
-    </div>
-
-  
 
 
-</td>
-</tr>
-
-
-
-    <!-- Modal -->
-<div class="modal fade" id="exampleModal-{{ category.id}}" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Warning!</h5>
-        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-      </div>
-      <div class="modal-body">
-        <p>Are you sure you want to delete the blog category?</p>
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-        <a class="btn btn-danger" hx-delete="{% url 'delete-category' category.id %}" data-bs-dismiss="modal">Delete</a>
-      </div>
-    </div>
-  </div>
-</div>
-  {% endfor %}
-</tbody> 
+      {% endfor %}
+  </tbody>
 </table>
-</div>
+
+  
+  
 
 
 
