--- a/dashboard/templates/dashboard/manage_blog.html
+++ b/dashboard/templates/dashboard/manage_blog.html
@@ -22,20 +22,31 @@
             <div class="col-md-6">
                 <h2>Categories</h2>
               
-                <div class="">
-                 
-                    <form hx-post="{% url 'add-category' %}" hx-target='#categories' class="">
-                        {% csrf_token %}
-                        <input type="text" 
-                            id="filmname-input"
-                            name="categoryname" 
-                            class="form-control-sm m-2" 
-                            placeholder="Enter a category name:" />
-                        <button type="submit" class="btn btn-success btn-sm " >Add New Category</button>
-                    </form>
-                </div>
+                
 
-                <table class="table" id="categories">
+                
+                
+
+
+                 
+
+
+                 
+                 <div class="tableform">
+
+                 
+                  
+                <form hx-post="{% url 'add-category' %}" hx-target='#categories' class="">
+                    {% csrf_token %}
+                    <input type="text" 
+                        id="filmname-input"
+                        name="categoryname" 
+                        class="form-control-sm mr-2" 
+                        placeholder="Category Name" />
+                    <button type="submit" class="btn btn-success btn-sm">Add Category</button>
+                </form>
+
+                  <table class="table" id="categories">
                     <thead>
                       <tr>
                         
@@ -67,7 +78,9 @@
                         {% endfor %}
                     </tbody>
                   </table>
-                
+               
+            </div>
+
             </div>
             <div class="col-md-6"><h2>Posts</h2>
 
