--- a/dashboard/templates/dashboard/manage_blog.html
+++ b/dashboard/templates/dashboard/manage_blog.html
@@ -20,7 +20,7 @@
     <div class="m-2 p-2">
         <div class="row">
             <div class="col-md-6">
-                <h2>Categories</h2>
+                <h2 class="display-6 fw-bold">Categories</h2>
               
                 
 
@@ -39,7 +39,7 @@
                 <form hx-post="{% url 'add-category' %}" hx-target='#categories' class="">
                     {% csrf_token %}
                     <input type="text" 
-                        id="filmname-input"
+                        id="category-input"
                         name="categoryname" 
                         class="form-control-sm mr-2" 
                         placeholder="Category Name" />
@@ -82,7 +82,7 @@
             </div>
 
             </div>
-            <div class="col-md-6"><h2>Posts</h2>
+            <div class="col-md-6 "><h2 class="display-6 fw-bold">Posts</h2>
 
                 <a class="btn btn-warning  mt-2 mb-1" href="{% url 'create_blog_post' %}">New Post</a>
 
