--- a/dashboard/templates/dashboard/manage_orders.html
+++ b/dashboard/templates/dashboard/manage_orders.html
@@ -24,7 +24,7 @@
         <table class="table">
             <thead>
                 <tr>
-                    <th scope="col">Order Number</th>
+                    <th scope="col">Order Date</th>
                     <th scope="col">Name</th>
                     <th scope="col">Shipped</th>
 
