--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -91,7 +91,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">My Wishlist</a>
+          <a class="nav-link" href="{% url 'wishlist' %}">My Wishlist</a>
         </li>
        
         <li class="nav-item dropdown">
