Run autopep8 to improve python formatting

--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -87,7 +87,7 @@
         </li>
 
         <li class="nav-item">
-          <a class="nav-link" href="#">Request Artwork</a>
+          <a class="nav-link" href="{% url 'artrequest' %}">Request Artwork</a>
         </li>
 
         <li class="nav-item">
