--- a/templates/base.html
+++ b/templates/base.html
@@ -1,5 +1,7 @@
 {% load static %}
 
+{% load cloudinary %}
+
 <!doctype html>
 <html lang="en">
 
@@ -35,7 +37,7 @@
    
    
     
-    
+
 
 
     {% if messages %}
