--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -113,9 +113,9 @@
 
      <li><a href="{% url 'view_bag' %}" class="nav-link px-2"> Cart: <i class="bi bi-bag-fill"></i> 
       {% if grand_total %}
-      ${{ grand_total|floatformat:2 }}
+      €{{ grand_total|floatformat:2 }}
   {% else %}
-      $0.00
+      €0.00
   {% endif %}
     </a> </li>
       </ul>
