Add form and model for custom contact messages

--- a/dashboard/templates/dashboard/manage_requests.html
+++ b/dashboard/templates/dashboard/manage_requests.html
@@ -15,7 +15,11 @@
         </div>
     </div>
 
+    {% for artrequest in artrequests %}
+    
+       {{ artrequest.email}}
 
+    {% endfor %}
 hh
 </div>
 
