--- a/home/templates/home/artwork_request.html
+++ b/home/templates/home/artwork_request.html
@@ -2,5 +2,49 @@
 {% load static %}
 
 {% block content %}
+<div class="container col-xl-10 col-xxl-8 px-4 py-5">
+    <div class="row align-items-center g-lg-5 py-5">
+      <div class="col-lg-7 text-center text-lg-start">
+        <h1 class="display-4 fw-bold lh-1 mb-3">We want to hear from you!</h1>
+        <p class="col-lg-10 fs-4">If you have any ideas or suggestions for computer generated artwork that you woulkd like to see, don't hesitate to get in touch. Let us know what themes or subjects you want to see and what styles you're interested in. Cheers!.</p>
+      </div>
+      <div class="col-md-10 mx-auto col-lg-5">
+        <!-- <form class="p-4 p-md-5 border rounded-3 bg-light">
+          <div class="form-floating mb-3">
+            <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com" required>
+            <label for="floatingInput">Email address</label>
+          </div>
+          
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Your suggestion:</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" required></textarea>
+          </div>
+          <button class="w-100 btn btn-lg btn-primary" type="submit">Send your ideas!</button>
+         
+         
+        </form> -->
+        <!-- <form action="" method="post">
+            {% csrf_token %}
+            {{ form }}
+            <input type="submit" value="Submit">
+         </form> -->
 
+         <form hx-post="{% url 'artrequestform' %}" hx-target='#contact-list' class="d-flex align-items-center" method="POST">
+            {% csrf_token %}
+            <input type="text" name="email" class="form-control-sm mr-2" placeholder="Enter name" hx-post="/check-name/" hx-trigger="keyup" hx-target="#name-exist"/>
+
+            <input type="text" name="message" class="form-control-sm mr-2" placeholder="Enter phone number" />
+            
+            <button hx-post='{% url "artrequestform"%}' hx-target='#contact-list' type="submit" class="btn btn-success btn-sm">Save</button>
+        </form>
+
+        <!-- <form hx-post="{% url 'artrequestform' %}" hx-swap="outerHTML">
+            {% csrf_token %}
+            <p class="subtitle">Get in touch!</p>
+            {{ contact_form }}
+            <input type="submit" value="Submit">
+          </form> -->
+      </div>
+    </div>
+  </div>
 {% endblock %}
