--- a/home/templates/home/artwork_request.html
+++ b/home/templates/home/artwork_request.html
@@ -23,27 +23,14 @@
          
          
         </form> -->
-        <!-- <form action="" method="post">
+        <form method="post">
             {% csrf_token %}
-            {{ form }}
-            <input type="submit" value="Submit">
-         </form> -->
-
-         <form hx-post="{% url 'artrequestform' %}" hx-target='#contact-list' class="d-flex align-items-center" method="POST">
-            {% csrf_token %}
-            <input type="text" name="email" class="form-control-sm mr-2" placeholder="Enter name" hx-post="/check-name/" hx-trigger="keyup" hx-target="#name-exist"/>
-
-            <input type="text" name="message" class="form-control-sm mr-2" placeholder="Enter phone number" />
-            
-            <button hx-post='{% url "artrequestform"%}' hx-target='#contact-list' type="submit" class="btn btn-success btn-sm">Save</button>
+            {{ form.as_p }}
+            <div class="form-actions">
+              <button type="submit">Send</button>
+            </div>
         </form>
-
-        <!-- <form hx-post="{% url 'artrequestform' %}" hx-swap="outerHTML">
-            {% csrf_token %}
-            <p class="subtitle">Get in touch!</p>
-            {{ contact_form }}
-            <input type="submit" value="Submit">
-          </form> -->
+        
       </div>
     </div>
   </div>
