--- a/dashboard/templates/dashboard/manage_requests.html
+++ b/dashboard/templates/dashboard/manage_requests.html
@@ -15,12 +15,48 @@
         </div>
     </div>
 
-    {% for artrequest in artrequests %}
-    
-       {{ artrequest.email}}
+    <div class="m-2 p-2">
 
-    {% endfor %}
-hh
+
+
+        <table class="table my-5">
+            <thead>
+                <tr>
+                    <th scope="col">Message</th>
+                    <th scope="col">Date</th>
+                    <th scope="col">Email</th>
+                    <th scope="col">Delete</th>
+                </tr>
+            </thead>
+            <tbody hx-confirm="Are you sure?" hx-target="closest tr" hx-swap="outerHTML">
+                {% for artrequest in artrequests %}
+
+                <tr>
+
+                    <td>{{ artrequest.message_text}}</td>
+                    <td>{{ artrequest.date}}</td>
+
+                    <td>
+                        {{ artrequest.email}}
+                    </td>
+
+                    <td>
+                        
+                        <button class="btn btn-danger btn-sm" hx-delete="{% url 'delete_artrequest' artrequest.id %}">
+                            Delete
+                        </button>
+                    </td>
+
+                   
+               
+                {% endfor %}
+            </tbody>
+        </table>
+
+
+    </div>
+
+   
 </div>
 
 {% endblock %}
