--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -1,4 +1,4 @@
-<div class="container-fluid bg-dark text-light">
+<div class="container-fluid bg-dark text-light mt-5">
   <div class="container">
     <footer class="pt-5 pb-2">
       <div class="row">
