Add new product card layout

--- a/templates/includes/footer.html
+++ b/templates/includes/footer.html
@@ -40,7 +40,7 @@
             <p>Find out whenever we launch new artwork and be first in line.</p>
             <div class="d-flex flex-column flex-sm-row w-100 gap-2">
               <label for="newsletter1" class="visually-hidden">Email address</label>
-              <input type="email" name="email" placeholder="Enter Email to Subscribe">
+              <input type="email" name="email" placeholder="Enter email here">
               <button class="btn btn-primary" type="submit">Subscribe</button>
             </div>
           </form>
