--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -20,7 +20,173 @@
   <div>NUMBER: {{ sorted_products.count }}</div>
   <div id="prod-list">
    
-    {% include "products/snippets/product-list.html" %}
+    {% include "products/snippets/product_list.html" %}
+</div>
+
+
+
+<div class="row">
+
+
+  <div class="col-lg-4 col-md-6 col-sm-6">
+    <div class="product__item">
+        <div class="product__item__pic set-bg" data-setbg="img/product/product-2.jpg">
+            <ul class="product__hover">
+                <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
+                <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+                </li>
+                <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+            </ul>
+        </div>
+        <div class="product__item__text">
+            <h6>Piqué Biker Jacket</h6>
+            <a href="#" class="add-cart">+ Add To Cart</a>
+            <div class="rating">
+                <i class="fa fa-star-o"></i>
+                <i class="fa fa-star-o"></i>
+                <i class="fa fa-star-o"></i>
+                <i class="fa fa-star-o"></i>
+                <i class="fa fa-star-o"></i>
+            </div>
+            <h5>$67.24</h5>
+            
+        </div>
+    </div>
+</div>
+
+<div class="col-lg-4 col-md-6 col-sm-6">
+  <div class="product__item">
+      <div class="product__item__pic set-bg" data-setbg="img/product/product-2.jpg">
+          <ul class="product__hover">
+              <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
+              <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+              </li>
+              <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+          </ul>
+      </div>
+      <div class="product__item__text">
+          <h6>Piqué Biker Jacket</h6>
+          <a href="#" class="add-cart">+ Add To Cart</a>
+          <div class="rating">
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+          </div>
+          <h5>$67.24</h5>
+          
+      </div>
+  </div>
+</div>
+
+<div class="col-lg-4 col-md-6 col-sm-6">
+  <div class="product__item">
+      <div class="product__item__pic set-bg" data-setbg="img/product/product-2.jpg">
+          <ul class="product__hover">
+              <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
+              <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+              </li>
+              <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+          </ul>
+      </div>
+      <div class="product__item__text">
+          <h6>Piqué Biker Jacket</h6>
+          <a href="#" class="add-cart">+ Add To Cart</a>
+          <div class="rating">
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+          </div>
+          <h5>$67.24</h5>
+          
+      </div>
+  </div>
+</div>
+
+<div class="col-lg-4 col-md-6 col-sm-6">
+  <div class="product__item">
+      <div class="product__item__pic set-bg" data-setbg="img/product/product-2.jpg">
+          <ul class="product__hover">
+              <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
+              <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+              </li>
+              <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+          </ul>
+      </div>
+      <div class="product__item__text">
+          <h6>Piqué Biker Jacket</h6>
+          <a href="#" class="add-cart">+ Add To Cart</a>
+          <div class="rating">
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+          </div>
+          <h5>$67.24</h5>
+          
+      </div>
+  </div>
+</div>
+
+<div class="col-lg-4 col-md-6 col-sm-6">
+  <div class="product__item">
+      <div class="product__item__pic set-bg" data-setbg="img/product/product-2.jpg">
+          <ul class="product__hover">
+              <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
+              <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+              </li>
+              <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+          </ul>
+      </div>
+      <div class="product__item__text">
+          <h6>Piqué Biker Jacket</h6>
+          <a href="#" class="add-cart">+ Add To Cart</a>
+          <div class="rating">
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+          </div>
+          <h5>$67.24</h5>
+          
+      </div>
+  </div>
+</div>
+
+
+<div class="col-lg-4 col-md-6 col-sm-6">
+  <div class="product__item">
+      <div class="product__item__pic set-bg" data-setbg="img/product/product-2.jpg">
+          <ul class="product__hover">
+              <li><a href="#"><img src="img/icon/heart.png" alt=""></a></li>
+              <li><a href="#"><img src="img/icon/compare.png" alt=""> <span>Compare</span></a>
+              </li>
+              <li><a href="#"><img src="img/icon/search.png" alt=""></a></li>
+          </ul>
+      </div>
+      <div class="product__item__text">
+          <h6>Piqué Biker Jacket</h6>
+          <a href="#" class="add-cart">+ Add To Cart</a>
+          <div class="rating">
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+              <i class="fa fa-star-o"></i>
+          </div>
+          <h5>$67.24</h5>
+          
+      </div>
+  </div>
+</div>
+
+
+
 </div>
 
 </div>
