--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -101,7 +101,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" href="{% url 'my_orders' %}">My Orders</a></li>
-            <li><a class="dropdown-item" href="{% url 'blog' %}">My Details</a></li>
+            <li><a class="dropdown-item" href="{% url 'profile' %}">My Details</a></li>
            
           </ul>
         </li>
