--- a/products/templates/products/includes/search_results.html
+++ b/products/templates/products/includes/search_results.html
@@ -10,7 +10,7 @@
         {% for product in products %}
           <div class="col">
             <div class="card border-0">
-              <a href="{% url 'product_detail' product.id %}"><img src="{{ product.image.url }}" class="card-img-top rounded-0" alt="..."></a>
+              <a href="{% url 'product_detail' product.id %}" class="stretched-link"><img src="{{ product.image.url }}" class="card-img-top rounded-0" alt="..."></a>
               <div class="card-body px-0">
                 <h6 class="card-text mt-2">{{ product.name }}</h6>
                 <p class="card-text mb-1 text-warning"> <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star"></i><i class="bi bi-star"></i></p>
