--- a/blog/templates/blog/blog_post_detail.html
+++ b/blog/templates/blog/blog_post_detail.html
@@ -9,13 +9,10 @@
     <img class="d-block mx-auto mb-4 img-fluid" src="{{ blogpost.image.url }}" alt="" >
     <h1 class="display-5 fw-bold text-center">{{blogpost.title}}</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="mb-4">{{ blogpost.post_text }}</p>
+      <p class="mb-4">{{ blogpost.post_text |linebreaks }}</p>
 
 
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-        <button type="button" class="btn btn-primary btn-lg px-4 gap-3">Primary button</button>
-        <button type="button" class="btn btn-outline-secondary btn-lg px-4">Secondary</button>
-      </div>
+     
 
       <div class="m-4 text-muted text-center">
        Published: {{ blogpost.published_on }}
