--- a/products/templates/products/product_form.html
+++ b/products/templates/products/product_form.html
@@ -1,15 +1,15 @@
-{% extends "base.html" %}
+{% extends 'base.html' %} 
+{% load crispy_forms_tags %}
 {% load static %}
-
+{% load cloudinary %}
 
 
 {% block content %}
-   
-
+<div class="container-fluid t">
 <div class="container my-5">
-    <div class="row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
+    <div class="row bg-light p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
       
-                <h3 class="text-center"><b>Create New Blog Post</b></h3>
+                <h3 class="text-center"><b>Product</b></h3>
                 <br />
                 <p>Enter the details of your product here. All field with an asterisk* are mandatory. You can add an image if you choose.</p>
                   <form class="review-form" enctype="multipart/form-data" method="POST">
@@ -26,12 +26,13 @@
                       </div>
                      <!-- cancel and return to reviews -->
                       <div class="d-grid">
-                        <a class="btn btn-warning btn-lg mt-2 mb-2" href="{% url 'home' %}">Cancel</a>
+                        <a class="btn btn-warning btn-lg mt-2 mb-2" href="{% url 'manage_products' %}">Cancel</a>
                       </div>
                     </div>
                   </form>
               
               </div>
             </div>
+          </div>
 {% endblock %}
 
