Alter styling on allauth base templates

--- a/products/templates/products/product_form.html
+++ b/products/templates/products/product_form.html
@@ -5,7 +5,7 @@
 
 
 {% block content %}
-<div class="container-fluid t">
+<div class="container-fluid">
 <div class="container my-5">
     <div class="row bg-light p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
       
