--- a/dashboard/templates/dashboard/manage_products.html
+++ b/dashboard/templates/dashboard/manage_products.html
@@ -106,7 +106,7 @@
                                 <a class="btn btn-success btn-sm" href="{% url 'product_detail' product.id %}">View</a>
                             </td>
                             <td>
-                                <a class="btn btn-warning btn-sm" href="">Edit</a>
+                                <a class="btn btn-warning btn-sm" href="{% url 'edit_product' product.id %}">Edit</a>
                             </td>
                             <td>
                                 <button class="btn btn-danger btn-sm" hx-delete="{% url 'delete_product' product.id %}">
