--- a/templates/allauth/account/base.html
+++ b/templates/allauth/account/base.html
@@ -1,15 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <div class="container header-container">
-        <div class="overlay"></div>
-        <div class="row">
-            <div class="col-12 col-md-6">
-                <div class="allauth-form-inner-content">
+<div class="container-fluid">
+    <div class="container my-5 text-center">
+        <div class="row bg-light p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
                     {% block inner_content %}
                     {% endblock %}
-                </div>
+              
             </div>
         </div>
     </div>
 {% endblock %}
+
