Replace dollars with euros

--- a/home/templates/home/artwork_request.html
+++ b/home/templates/home/artwork_request.html
@@ -7,7 +7,7 @@
     <div class="row align-items-center g-lg-5 py-5">
       <div class="col-lg-7 text-center text-lg-start">
         <h1 class="display-4 fw-bold lh-1 mb-3">We want to hear from you!</h1>
-        <p class="col-lg-10 fs-4">If you have any ideas or suggestions for computer generated artwork that you woulkd like to see, don't hesitate to get in touch. Let us know what themes or subjects you want to see and what styles you're interested in. Cheers!.</p>
+        <p class="col-lg-10 fs-4">If you have any ideas or suggestions for computer generated artwork that you woulkd like to see, don't hesitate to get in touch. Let us know what themes or subjects you want to see and what styles you're interested in. Cheers!</p>
       </div>
       <div class="col-md-10 mx-auto col-lg-5">
          
