--- a/templates/base.html
+++ b/templates/base.html
@@ -14,6 +14,11 @@
     <meta name="keywords" content="{% block specific-product-keywords %}{% endblock %}, ttt">
     
     {% endblock %}
+    <!-- favicon -->
+  
+  <link rel="apple-touch-icon" sizes="180x180" href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/apple-touch-icon_wlgjmz.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/favicon-32x32_rvonjr.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://res.cloudinary.com/dpsodnurd/image/upload/v1660428211/favicon-16x16_oa0fi3.png">
 
     {% block corecss %}
     <link rel="stylesheet" href="{% static 'css/base.css' %}">
