--- a/templates/base.html
+++ b/templates/base.html
@@ -10,8 +10,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="keywords" content="{% block specific-product-keywords %}{% endblock %}, ttt">
+    <meta name="description"
+        content="Electric Dreams sells prints and posters of computer-genrated artwork with technological and scientific themes.">
+    <meta name="keywords"
+        content="generative art, dall-e 2, midjourney, science, technology, posters, prints, artwork, AI, artificial intelligence, cyberpunk, retrofuturism, pixel art, art generator">
 
     {% endblock %}
     <!-- favicon -->
