Fix bug in product dashboard editing/deleting of categories, wrong template returned

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -105,10 +105,8 @@
                     </div>
                 {% else %}
                     <p class="lead mb-5">Your bag is empty.</p>
-                    <a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-                        <span class="icon">
-                            <i class="fas fa-chevron-left"></i>
-                        </span>
+                    <a href="{% url 'products' %}" class="btn btn-outline-secondary  btn-lg">
+                       
                         <span class="text-uppercase">Keep Shopping</span>
                     </a>
                 {% endif %}
