--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -11,7 +11,7 @@
  
       
       <li class="nav-item dropdown">
-        <a class="nav-link dropdown-toggle px-2 text-white" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+        <a class="nav-link dropdown-toggle px-2 text-white" href="#" id="sitenavbarDropdown" role="button" data-bs-toggle="dropdown"
           aria-expanded="false">
           Manage Site
         </a>
@@ -70,7 +70,7 @@
        
 
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          <a class="nav-link dropdown-toggle" href="#" id="blognavbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             Blog
           </a>
@@ -95,7 +95,7 @@
         </li>
        
         <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown"
+          <a class="nav-link dropdown-toggle" href="#" id="profilenavbarDropdown" role="button" data-bs-toggle="dropdown"
             aria-expanded="false">
             My Profile
           </a>
