--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -1,10 +1,8 @@
-<a href="{% url 'products' %}" class="btn btn-outline-black rounded-0 btn-lg">
-    <span class="icon">
-        <i class="fas fa-chevron-left"></i>
-    </span>
+<a href="{% url 'products' %}" class="btn btn-outline-secondary btn-lg">
+    
     <span class="text-uppercase">Keep Shopping</span>
 </a>
-<a href="{% url 'checkout' %}" class="btn btn-black rounded-0 btn-lg">
+<a href="{% url 'checkout' %}" class="btn btn-outline-success btn-lg">
     <span class="text-uppercase">Secure Checkout</span>
     <span class="icon">
         <i class="fas fa-lock"></i>
