--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -1,32 +1,31 @@
+
+
+
 <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
     {% csrf_token %}
-    <div class="form-group">
-        <div class="input-group">
-            <div class="input-group-prepend">
-                <button class="decrement-qty btn btn-sm btn-black rounded-0" 
-                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
-                    <span>
-                        <i class="fas fa-minus fa-sm"></i>
-                    </span>
-                </button>
-            </div>
-            <input class="form-control form-control-sm qty_input" type="number"
-                name="quantity" value="{{ item.quantity }}" min="1" max="99"
-                data-item_id="{{ item.item_id }}"
-                id="id_qty_{{ item.item_id }}">
-            <div class="input-group-append">
-                <button class="increment-qty btn btn-sm btn-black rounded-0"
-                    data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
-                    <span>
-                        <i class="fas fa-plus fa-sm"></i>
-                    </span>
-                </button>
-            </div>
-            {% if item.product.has_sizes %}
-                <input type="hidden" name="product_size" value="{{ item.size }}">
-            {% endif %}
-        </div>
+    <div class="form-row col-lg-12 d-grid gap-2">
+       
+        <select class="form-select mb-3" name="quantity"  id="id_qty_{{ item.item_id }}" value="{{ item.quantity }}">
+          
+            <option {% if item.quantity == 1 %} selected {% endif %} value="1">1</option>
+            <option {% if item.quantity == 2 %} selected {% endif %} value="2">2</option>
+            <option {% if item.quantity == 3 %} selected {% endif %} value="3">3</option>
+            <option {% if item.quantity == 4 %} selected {% endif %} value="4">4</option>
+            <option {% if item.quantity == 5 %} selected {% endif %} value="5">5</option>
+            <option {% if item.quantity == 6 %} selected {% endif %} value="6">6</option>
+            <option {% if item.quantity == 7 %} selected {% endif %} value="7">7</option>
+            <option {% if item.quantity == 8 %} selected {% endif %} alue="8">8</option>
+            <option {% if item.quantity == 9 %} selected {% endif %} value="9">9</option>
+            <option {% if item.quantity == 10 %} selected {% endif %} value="10">10</option>
+
+        </select>
+
+        <input type="submit" class="btn btn-outline-success mb-3" value="Update">
+        <a class="remove-item  btn btn-outline-warning" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
     </div>
+   
+    
+
 </form>
-<a class="update-link text-info"><small>Update</small></a>
-<a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}"><small>Remove</small></a>
+
+
