--- a/products/templates/products/snippets/categories_list.html
+++ b/products/templates/products/snippets/categories_list.html
@@ -1,32 +1,37 @@
-<table class="table" id="categories">
+
+
+
+  <table class="table" id="categories">
     <thead>
-      <tr>
-        
-        <th>Name</th>
-       
-        <th></th>
-        <th></th>
-      </tr>
+        <tr>
+
+            <th>Name</th>
+
+            <th></th>
+            <th></th>
+        </tr>
     </thead>
     <tbody hx-confirm="Are you sure?" hx-target="closest tr" hx-swap="outerHTML">
         {% for category in categories %}
         <tr>
             <td>{{ category.name}}</td>
-           
-            
+
+
             <td>
-                <button class="btn btn-warning btn-sm "hx-confirm="unset" hx-get="{% url 'edit-category' category.id %}">
+                <button class="btn btn-warning btn-sm " hx-confirm="unset"
+                    hx-get="{% url 'edit_product_category' category.id %}">
                     Edit
                 </button>
             </td>
             <td>
-              <button class="btn btn-danger btn-sm" hx-delete="{% url 'delete-category' category.id %}">
-                Delete
-              </button>
+                <button class="btn btn-danger btn-sm"
+                    hx-delete="{% url 'delete_product_category' category.id %}">
+                    Delete
+                </button>
             </td>
-          </tr>
-  
-  
+        </tr>
+
+
         {% endfor %}
     </tbody>
-  </table>
+</table>
