Update profile detaisl editing form to work with new custom user model

--- a/bag/templates/bag/quantity-form.html
+++ b/bag/templates/bag/quantity-form.html
@@ -14,7 +14,7 @@
             <option {% if item.quantity == 5 %} selected {% endif %} value="5">5</option>
             <option {% if item.quantity == 6 %} selected {% endif %} value="6">6</option>
             <option {% if item.quantity == 7 %} selected {% endif %} value="7">7</option>
-            <option {% if item.quantity == 8 %} selected {% endif %} alue="8">8</option>
+            <option {% if item.quantity == 8 %} selected {% endif %} value="8">8</option>
             <option {% if item.quantity == 9 %} selected {% endif %} value="9">9</option>
             <option {% if item.quantity == 10 %} selected {% endif %} value="10">10</option>
 
