--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -23,6 +23,12 @@
                 <hr>
             </div>
         </div>
+
+        <form method="post" action="{% url 'remove-profile' %}">
+         {% csrf_token %}
+         <button type="submit" class="btn btn-large btn-danger my-3" onclick="return confirm('Are you sure? This will delete all your information!')">Delete Account</button>
+      </form>
+
         <div class="row">
             <div class="col-12 col-lg-6">
                 <p class="text-muted">Default Delivery Information</p>
