--- a/templates/errors/403_csrf.html
+++ b/templates/errors/403_csrf.html
@@ -4,9 +4,9 @@
 <div class="container">
 <div class="px-4 py-5 my-5 text-center">
     
-    <h1 class="display-5 fw-bold">404 Not Found</h1>
+    <h1 class="display-5 fw-bold">403 Forbidden</h1>
     <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">This page could not be found. Click below to go back to the homepage.</p>
+      <p class="lead mb-4">You do not have access to this page. CLick below to go back to the homepage.</p>
       <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         <a href="{% url 'home' %}" class="btn btn-primary">Home</a>
         
